# convolution-optimization-c-program

./: .gitignore  CMakeLists.txt  README.md  lab3_optimized.c  lab3_original.c
